added file type selector

--- a/Code/Frontend/frontend/index.html
+++ b/Code/Frontend/frontend/index.html
@@ -88,6 +88,43 @@
               <option value="Download_Invoice_Lines.json">Invoice Lines</option>
             </select>
           </div>
+          
+          <div class="file-types-section">
+            <label class="file-types-label">File Types:</label>
+            <div class="file-types-grid">
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="pdf" checked>
+                <span class="checkmark"></span>
+                <span class="file-ext">PDF</span>
+              </label>
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="xlsx" checked>
+                <span class="checkmark"></span>
+                <span class="file-ext">Excel</span>
+              </label>
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="csv">
+                <span class="checkmark"></span>
+                <span class="file-ext">CSV</span>
+              </label>
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="docx">
+                <span class="checkmark"></span>
+                <span class="file-ext">Word</span>
+              </label>
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="png">
+                <span class="checkmark"></span>
+                <span class="file-ext">PNG</span>
+              </label>
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="jpg">
+                <span class="checkmark"></span>
+                <span class="file-ext">JPG</span>
+              </label>
+            </div>
+          </div>
+          
           <div class="action-buttons">
             <button id="download-btn" class="btn btn-success btn-large" disabled>
               <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
