Add XML file type support

--- a/Code/Frontend/frontend/index.html
+++ b/Code/Frontend/frontend/index.html
@@ -122,6 +122,11 @@
                 <span class="checkmark"></span>
                 <span class="file-ext">JPG</span>
               </label>
+              <label class="file-type-checkbox">
+                <input type="checkbox" name="filetype" value="xml">
+                <span class="checkmark"></span>
+                <span class="file-ext">XML</span>
+              </label>
             </div>
           </div>
           
