Add progress bar to download UI

--- a/Code/Frontend/frontend/index.html
+++ b/Code/Frontend/frontend/index.html
@@ -139,6 +139,16 @@
               Stop
             </button>
           </div>
+          
+          <!-- Progress Bar -->
+          <div id="progress-container" class="progress-container" style="display: none;">
+            <div class="progress-info">
+              <span id="progress-text">Preparing...</span>
+            </div>
+            <div class="progress-bar">
+              <div id="progress-fill" class="progress-fill"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
