Fix stop functionality and add full cross-platform support
Stop Button Fixes:
- Fixed summary report not displaying when stop pressed
- Frontend now waits 2 seconds before removing output listener
- Reduced SIGTERM timeout to 1.5s to ensure summary prints
- Fixed fully processed invoice count (was incorrectly subtracting 1)
- Stop now shows: stopped position, files from current invoice, total processed

File Download Improvements:
- Fixed files occasionally staying in Downloads folder instead of invoice folder
- Added file stability check: waits for file size to stabilize before moving
- Ensures files are completely downloaded before attempting to move them

Cross-Platform Support (Windows & Mac):
- Added Windows node.exe detection (Program Files, AppData locations)
- Added Mac node detection (Homebrew, usr/local, usr/bin)
- Enhanced PATH for both platforms (Windows: Program Files, Mac: Homebrew paths)
- Fixed process signals: SIGTERM (Mac), SIGINT (Windows), SIGBREAK (Windows)
- All core functionality now works identically on both platforms

UI Improvements:
- File type dropdown now closed by default (less overwhelming)
- Fixed console text selection (added cross-browser CSS properties)
- Console output now fully selectable with mouse

Bug Fixes:
- Fixed ENOENT 'spawn node' error on packaged Windows apps
- Fixed stop hanging indefinitely without showing summary

--- a/Code/Frontend/frontend/index.html
+++ b/Code/Frontend/frontend/index.html
@@ -87,7 +87,7 @@
               <label class="file-types-label">File Types:</label>
               <button id="select-all-btn" class="btn-select-all">Deselect All</button>
             </div>
-            <details class="file-types-dropdown" open>
+            <details class="file-types-dropdown">
               <summary class="file-types-summary">
                 <span id="selected-count">All file types selected (27)</span>
                 <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
